--- a/dscriptr/Base.lproj/MainMenu.xib
+++ b/dscriptr/Base.lproj/MainMenu.xib
@@ -15,10 +15,13 @@
             <connections>
                 <outlet property="editView" destination="mPA-96-aGW" id="RnL-iK-XeA"/>
                 <outlet property="rootView" destination="EiT-Mj-1SZ" id="jM7-Ci-Gmj"/>
+                <outlet property="tree" destination="Jil-DN-rky" id="qE9-lh-NIH"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
+        <customObject id="T80-bY-j32" customClass="DSProjectViewCtrl"/>
+        <treeController childrenKeyPath="children" leafKeyPath="isLeaf" id="Jil-DN-rky"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
                 <menuItem title="dscriptr" id="1Xt-HY-uBw">
@@ -677,41 +680,45 @@
                 <rect key="frame" x="0.0" y="0.0" width="581" height="447"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Hy-YI-YuF">
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="mPA-96-aGW">
+                        <rect key="frame" x="178" y="20" width="383" height="407"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    </customView>
+                    <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PRw-uJ-D1S">
                         <rect key="frame" x="20" y="20" width="150" height="407"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <clipView key="contentView" id="hBi-W8-DwX">
+                        <clipView key="contentView" id="KlY-H6-70A">
                             <rect key="frame" x="1" y="1" width="148" height="405"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" viewBased="YES" indentationPerLevel="16" outlineTableColumn="aRn-qe-Bfz" id="dHh-S3-71R">
+                                <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="systemDefault" viewBased="YES" indentationPerLevel="16" outlineTableColumn="xF8-nJ-3d3" id="yWp-eE-gXI">
                                     <rect key="frame" x="0.0" y="0.0" width="148" height="405"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="0.0"/>
                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                     <tableColumns>
-                                        <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="145" minWidth="16" maxWidth="1000" id="aRn-qe-Bfz">
+                                        <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="145" minWidth="16" maxWidth="1000" id="xF8-nJ-3d3">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
                                             </tableHeaderCell>
-                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="NvO-dE-k9X">
+                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="kgh-sC-tve">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <prototypeCellViews>
-                                                <tableCellView identifier="HeaderCell" id="bDo-Ka-vjb">
+                                                <tableCellView identifier="HeaderCell" id="eFf-ok-vdf">
                                                     <rect key="frame" x="1" y="0.0" width="145" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GA1-LO-c2s">
+                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yxk-wx-3Qc">
                                                             <rect key="frame" x="0.0" y="1" width="145" height="14"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="HEADER CELL" id="bOs-vN-EtS">
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="HEADER CELL" id="03B-rm-29O">
                                                                 <font key="font" metaFont="smallSystemBold"/>
                                                                 <color key="textColor" red="0.43921568630000002" green="0.4941176471" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -719,65 +726,70 @@
                                                         </textField>
                                                     </subviews>
                                                     <connections>
-                                                        <outlet property="textField" destination="GA1-LO-c2s" id="U4N-dr-P7P"/>
+                                                        <outlet property="textField" destination="yxk-wx-3Qc" id="jId-IU-65B"/>
                                                     </connections>
                                                 </tableCellView>
-                                                <tableCellView identifier="DataCell" id="7aZ-zg-q3x">
+                                                <tableCellView identifier="DataCell" id="qFq-i0-BmB">
                                                     <rect key="frame" x="1" y="17" width="145" height="17"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fah-if-48n">
+                                                        <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wGz-UY-1S8">
                                                             <rect key="frame" x="3" y="0.0" width="17" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="JQb-vD-EWN"/>
+                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="RIX-MW-qBi"/>
                                                         </imageView>
-                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6T5-sQ-G1i">
+                                                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DZk-En-dJ3">
                                                             <rect key="frame" x="25" y="0.0" width="120" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="qBh-Ig-pSR">
+                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="LAN-C0-1Lf">
                                                                 <font key="font" metaFont="system"/>
                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             </textFieldCell>
+                                                            <connections>
+                                                                <binding destination="qFq-i0-BmB" name="value" keyPath="objectValue.title" id="cZ6-gY-Ipr"/>
+                                                            </connections>
                                                         </textField>
                                                     </subviews>
                                                     <connections>
-                                                        <outlet property="imageView" destination="fah-if-48n" id="Mhs-Rr-gNn"/>
-                                                        <outlet property="textField" destination="6T5-sQ-G1i" id="tyr-nh-bOQ"/>
+                                                        <outlet property="imageView" destination="wGz-UY-1S8" id="56w-2O-6n5"/>
+                                                        <outlet property="textField" destination="DZk-En-dJ3" id="t7B-VL-G4J"/>
                                                     </connections>
                                                 </tableCellView>
                                             </prototypeCellViews>
+                                            <connections>
+                                                <binding destination="Jil-DN-rky" name="value" keyPath="arrangedObjects" id="HVR-6V-OMp"/>
+                                            </connections>
                                         </tableColumn>
                                     </tableColumns>
+                                    <connections>
+                                        <outlet property="delegate" destination="T80-bY-j32" id="gIq-PU-f7k"/>
+                                    </connections>
                                 </outlineView>
                             </subviews>
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
                         <constraints>
-                            <constraint firstAttribute="width" constant="150" id="RjS-Wr-NY5"/>
+                            <constraint firstAttribute="width" constant="150" id="pgK-4I-KKZ"/>
                         </constraints>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="qeh-5m-dSN">
-                            <rect key="frame" x="1" y="-15" width="0.0" height="16"/>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="f5x-ot-g5c">
+                            <rect key="frame" x="1" y="119" width="238" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="nCR-hd-ScN">
-                            <rect key="frame" x="-15" y="1" width="16" height="0.0"/>
+                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="nHj-Z9-RBC">
+                            <rect key="frame" x="224" y="17" width="15" height="102"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
-                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="mPA-96-aGW">
-                        <rect key="frame" x="178" y="20" width="383" height="407"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </customView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mPA-96-aGW" firstAttribute="leading" secondItem="8Hy-YI-YuF" secondAttribute="trailing" constant="8" id="DpI-Q7-Xz2"/>
-                    <constraint firstItem="8Hy-YI-YuF" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="JFg-vk-oI8"/>
+                    <constraint firstItem="PRw-uJ-D1S" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="6fc-da-aUB"/>
+                    <constraint firstItem="mPA-96-aGW" firstAttribute="leading" secondItem="PRw-uJ-D1S" secondAttribute="trailing" constant="8" id="9by-d7-CLI"/>
                     <constraint firstItem="mPA-96-aGW" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="LGy-jc-aqe"/>
                     <constraint firstAttribute="trailing" secondItem="mPA-96-aGW" secondAttribute="trailing" constant="20" id="Mgi-dX-wGH"/>
-                    <constraint firstItem="8Hy-YI-YuF" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="XLe-J3-tLV"/>
                     <constraint firstAttribute="bottom" secondItem="mPA-96-aGW" secondAttribute="bottom" constant="20" id="eaJ-eA-954"/>
-                    <constraint firstAttribute="bottom" secondItem="8Hy-YI-YuF" secondAttribute="bottom" constant="20" id="hG9-7q-ZYb"/>
+                    <constraint firstItem="PRw-uJ-D1S" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="ie7-3H-7Xk"/>
+                    <constraint firstAttribute="bottom" secondItem="PRw-uJ-D1S" secondAttribute="bottom" constant="20" id="kNN-IZ-xtU"/>
                 </constraints>
             </view>
         </window>
